# promptarmor

./: .coverage 2  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py  config.yaml  demo_protection.json  policy.yaml  sample_policy.yaml
src/promptarmor/: __init__.py  __main__.py  cli.py  models.py  proxy.py  py.typed
src/promptarmor/adapters/: __init__.py  anthropic.py  generic.py  local_llm.py  openai.py
src/promptarmor/filters/: __init__.py  adaptive_defense.py  context_sanitizer.py  injection_detector.py  latent_whitelist.py  output_validator.py  self_reflection.py
src/promptarmor/policies/: __init__.py  engine.py  generator.py  yaml_loader.py
src/promptarmor/reporters/: __init__.py  console.py  html.py  json.py
src/promptarmor/utils/: __init__.py  crypto.py
tests/: test_adapters.py  test_adaptive_defense.py  test_cli.py  test_context_sanitizer.py  test_generator.py  test_injection_detector.py  test_latent_whitelist.py  test_models.py  test_output_validator.py  test_policy_engine.py  test_proxy.py  test_reporters.py  test_self_reflection.py  test_utils.py  test_yaml_loader.py
tests/test_filters/: test_filter_integration.py
tests/test_policies/: test_integration.py
