[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptarmor"
version = "0.1.0"
description = "Runtime defense toolkit against prompt injection for LLM APIs — intercepts, analyzes, and protects prompts in real-time"
authors = [
    { name = "Carlos Rocha", email = "Carlos@AIAgentObservatory.org" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "prompt-injection", "ai-safety", "llm-security", "agent-security",
    "jailbreak-defense", "runtime-guard", "adversarial", "self-reflection",
    "latent-whitelist", "mcp-guard", "ai-firewall",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "starlette>=0.37",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "numpy>=1.24",
    "mcp-taxonomy>=0.1.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.30",
]
anthropic = [
    "anthropic>=0.30",
]
local = [
    "sentence-transformers>=2.6",
    "scikit-learn>=1.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]
all = [
    "promptarmor[openai,anthropic,local,dev]",
]

[project.scripts]
promptarmor = "promptarmor.cli:app"

[project.urls]
Homepage = "https://github.com/Carlos-Projects/promptarmor"
Repository = "https://github.com/Carlos-Projects/promptarmor"
Issues = "https://github.com/Carlos-Projects/promptarmor/issues"
Changelog = "https://github.com/Carlos-Projects/promptarmor/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/promptarmor"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501", "B904"]

[tool.ruff.lint.per-file-ignores]
"src/promptarmor/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
